# CryptoPlayground

./: .clang-format  .gitignore  README.md
BreakingLCG/: CMakeLists.txt  CMakePresets.json  Gen.java  Lcg.java  ManualGen.java  Player.java  README.md
BreakingLCG/include/: EmulateJavaRandom.h  brute_force.h  second.h
BreakingLCG/src/: EmulateJavaRandom.cpp  brute_force.cpp  main.cpp  second.cpp
